--- a/dynamic-server/笔记 .md
+++ b/dynamic-server/笔记 .md
@@ -1,10 +1,11 @@
 ## 初始化项目
 ```
 npm init -y
+得到package.json文件
 ```
 
 ## 安装bootstrap
-1. 先创建 .bowerrc 文件,并指定第三方前端库的安装路径
+1. 先创建 `.bowerrc` 文件,并指定第三方前端库的安装路径
 
 ```
 $ touch .bowerrc
@@ -14,4 +15,13 @@ $ touch .bowerrc
 $ bower init
 $ bower install bootstrap --save
 ```
+
+如果报git没有安装，需要把git的安装目录添加到环境变量中去,用分号隔开
+C:\Program Files\Git\bin
+
+
+
+
+
+
 
