--- a/dynamic-server/笔记 .md
+++ b/dynamic-server/笔记 .md
@@ -19,7 +19,10 @@ $ bower install bootstrap --save
 如果报git没有安装，需要把git的安装目录添加到环境变量中去,用分号隔开
 C:\Program Files\Git\bin
 
-
+## 建立静态文件服务器
+```
+$ npm install mime --save
+```
 
 
 
