执行第一个gulp任务

--- a/5.gulp/笔记.md
+++ b/5.gulp/笔记.md
@@ -14,3 +14,8 @@ $ npm install
 $ npm install --production
 ```
 只要安装dependencies
+
+## 参数
+
+> gulp hello --gulpfile=./g.js
+> gulp hello --cwd=./g
